Creation of  a layout Component and fixing the footer issue

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <meta name="theme-color" content="#632222" />
+    <meta name="keywords" content="LandLord, realtor, real estate, rental, property listings, agents,home search, houses, rooms">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Pillar | Dennis Fisco">
+    <meta name="application-name" content="LandLord">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="LandLord">
     <meta
       name="description"
-      content="Webapp Realtor, Housing and Real Estate "
+      content="Discover your ideal home and rental property effortlessly with Landlord, the ultimate and leading realtor platform. Explore handpicked, top-rated listings, schedule viewings, and connect with trusted real estate agents all in one place. Start your home search today!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
